# tetoris

./: .gitignore  CMakeLists.txt  board.c  board.h  debug.c  debug.h  game.c  game.h  main.c  teto2bin.rb  tetorimino.c  tetorimino.h  tetoriminos.txt  ui.c  ui.h
